improved thumbnail logic (fixed broken thumbnails) put mirador standalone onto page (to fix overlapping)

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -22,3 +22,8 @@ footer {
     padding-top: 6px;
     text-align: center;
 }
+/*
+#viewer {
+    margin-top: 50px;
+    padding: 0px 0px 80px 0px;
+}*/
